# CLUE-python

./: .gitignore  LICENSE  README.md  __init__.py  concepts.py  config.py  data.py  demo_usage.py  evaluate.py  hallucination_detector.py  models.py  output_sequence_generator.py  pyproject.toml  requirements.text  requirements.txt  setup.config  setup.py  uncertainty.py
CLUE_PYTHON.egg-info/: PKG-INFO  SOURCES.txt
samples/: examples.ipynb
src/: concepts.py  config.py  datatypes.py  evaluate.py  example.py  example_context_usability.py  example_model_uncertainty.py  models.py  output_sequence_generator.py  uncertainty.py
src/llm_uncertainty_evals/: concepts.py  config.py  datatypes.py  evaluate.py  models.py  output_sequence_generator.py  uncertainty.py
src/llm_uncertainty_evals.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_models.py
